# tgoo

./: .env.dev.example  .env.example  .gitignore  AGENTS.md  Makefile  README.md  README_CN.md  README_JP.md  README_RU.md  README_TC.md  bootstrap.sh  docker-compose.dev.yml  docker-compose.tools.yml  docker-compose.yml  tgo.sh  tool.sh
repos/tgo-platform/: .env.example  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  test_imap_connection.py
repos/tgo-platform/app/: main.py
repos/tgo-platform/app/api/: dingtalk_utils.py  error_utils.py  feishu_utils.py  schemas.py  slack_utils.py  telegram_utils.py  wecom_utils.py  wukongim_utils.py
repos/tgo-platform/app/core/: async_tasks.py  config.py
repos/tgo-platform/app/db/: base.py  init_db.py  models.py
repos/tgo-platform/app/domain/: entities.py  ports.py
repos/tgo-platform/app/infra/: http.py  sse.py  visitor_client.py
repos/tgo-platform/app/utils/: encoding.py
repos/tgo-platform/migrations/: env.py  script.py.mako
repos/tgo-platform/migrations/versions/: .gitkeep  539a0c191ecf_init.py  add_dingtalk_inbox.py  add_feishu_inbox.py  add_slack_inbox.py  add_telegram_bridge_tables.py  add_telegram_inbox.py  add_telegram_topic_bindings.py  add_wecom_inbox_source_type.py  (+1 more)
repos/tgo-platform/scripts/: seed_email_platform.sql
repos/tgo-platform/specs/: architecture.md  database-setup.md  implementation.md  tgo-api.json  tgo-platform-tech.md
repos/tgo-platform/tests/: test_bridge_ingest.py  test_custom_platform_async_callback.py  test_non_blocking_platform_io.py  test_telegram_bridge.py
(+556 files in other folders)
