[tool.poetry]
name = "tgo-platform"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = ">=0.110,<1.0"
uvicorn = {version = ">=0.27,<1.0", extras=["standard"]}
sqlalchemy = ">=2.0,<3.0"
asyncpg = ">=0.29,<1.0"
httpx = ">=0.27,<1.0"
pydantic = ">=2.7,<3.0"
pydantic-settings = ">=2.3,<3.0"
sse-starlette = ">=1.6,<2.0"
python-dotenv = ">=1.0,<2.0"
redis = ">=5,<6"
alembic = ">=1.13,<2"
greenlet = "^3.2.4"
cryptography = ">=43.0.0"
slack-bolt = ">=1.18,<2.0"
slack-sdk = ">=3.21,<4.0"
requests = ">=2.31.0,<3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4,<9.0"
pytest-asyncio = ">=0.23,<1.0"
ruff = ">=0.5,<1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

